--- a/.gitignore
+++ b/.gitignore
@@ -140,5 +140,5 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
-# Project Service Information File(s)
-*.dat
+# Project Service Information File
+ServiceData.dat
